--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html lang='en'>
 	<head>
 		<script type="text/javascript">
@@ -41,8 +42,8 @@
 		<link rel="me" href="https://vdo.ninja/about" />
 		
 		<!-- Primary Meta Tags -->
-		<title>VDO.Ninja</title>
-		<meta id="metaTitle" name="title" content="VDO.Ninja" />
+		<title>Stream Tools</title>
+		<meta id="metaTitle" name="title" content="Stream Tools" />
 		<meta name="description" content="Bring live video from your smartphone, computer, or friends directly into your Studio. 100% free." />
 		<meta name="author" content="Steve Seguin" />
 		
@@ -62,14 +63,14 @@
 		<!-- X (Twitter) Card Tags -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:creator" content="@SteveSeguin">
-		<meta name="twitter:title" content="VDO.Ninja">
+		<meta name="twitter:title" content="Stream Tools">
 		<meta name="twitter:description" content="Bring live video from your smartphone, computer, or friends directly into OBS Studio or other. 100% free.">
 		<meta name="twitter:image" content="https://vdo.ninja/media/vdoNinja_logo_full.png">
 		
 		<!-- Open Graph Tags (also used by X) -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://vdo.ninja/">
-		<meta property="og:title" content="VDO.Ninja">
+		<meta property="og:title" content="Stream Tools">
 		<meta property="og:description" content="Bring live video from your smartphone, computer, or friends directly into OBS Studio or other. 100% free.">
 		<meta property="og:image" content="https://vdo.ninja/media/vdoNinja_logo_full.png">
 		<meta property="og:image:width" content="1200">
@@ -978,104 +979,20 @@
 				</div>
 			</div>
 			
-			<div id="container-7" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = './speedtest.html';">
-				<h2><span data-translate="run-a-speed-test">Run a Speed Test</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-tachometer-alt"></i>
-			</div>
-			
-			<div id="container-8" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = './mixer.html';">
-				<h2><span data-translate="try-the-mixer-out">Custom Mixed Layouts</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-blender"></i>
-			</div>
-			
-			<div id="container-14" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = 'https://versus.cam';">
-				<h2><span data-translate="try-out-versus-cam">Multi-Stream Monitor</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-gamepad"></i>
-			</div>
-			
-			<div id="container-15" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = './comms.html';">
-				<h2><span data-translate="voice-comms-app">Group Voice Comms</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-comments"></i>
-			</div>
-			
-			<div id="container-20" title="Draw on a digital whiteboard and publish the output via VDO.Ninja, WHIP, or just have fun" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = './whiteboard.html';">
-				<h2><span data-translate="try-the-whiteboard">Whiteboard</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-chalkboard"></i>
-			</div>
-			
-			<div id="container-9" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = 'https://guides.vdo.ninja';">
-				<h2><span data-translate="read-the-guides">Basic Usage Guides</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-book-open"></i>
-			</div>
-			
-			<div id="container-13" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = 'https://linkgen.vdo.ninja';">
-				<h2><span data-translate="wizard-link-generator">Wizard Link Generator</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-hat-wizard"></i>
-			</div>
-			
-			<div id="container-10" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = 'https://docs.vdo.ninja';">
-				<h2><span data-translate="get-full-documentation">Full Documentation</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-info"></i>
-			</div>
-			<div id="container-11" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = 'https://docs.vdo.ninja/steves-helper-apps/native-mobile-app-versions';">
-				<h2><span data-translate="get-the-native-app">Native Mobile Apps</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-mobile"></i>
-				<div class="container-inner">
-					Loading ...
-				</div>
-			</div>
-			<div id="container-19" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = 'https://github.vdo.ninja';">
-				<h2><span data-translate="get-the-source-code">Source Code</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-code-branch"></i>
-			</div>
-			
-			<div id="container-12" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = 'https://docs.vdo.ninja/getting-started/sponsor';">
-				<h2><span data-translate="show-your-support">Show Your Support</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-heartbeat"></i>
-			</div>
-			
-			<div id="container-17" class="column columnfade pointer card hidden" style="overflow: hidden;" onclick="window.location = './whip';">
-				<h2><span data-translate="publish-via-whip">Publish via WHIP</span></h2>
-				<i style="margin-top:30px;font-size:600%;overflow:hidden;" class="largeDarkIcon las la-broadcast-tower"></i>
-			</div>
-			
-			<div id="container-16" class="column columnfade pointer card hidden" style=" overflow-y: auto;">
-				<h2><span data-translate="share-whepsrc">Share via WHEP</span></h2>
-				<i style="margin-top:30px;font-size:560%;overflow:hidden;" class="largeDarkIcon las la-broadcast-tower"></i>
-				<div class="container-inner">
-					<br />
-					<div id="previewWhepSource"></div>
-					<br />
-					<span data-translate="enter-the-whep-URL-you-wish-to-share">Enter the WHEP URL you wish to share.</span><br /><br />
-					<input type="text" autocorrect="off" id="whepURL" autocapitalize="none" style="margin:10px; border:2px solid; padding:10px; width:400px;" title="Enter an HTTPS URL" multiple/><br />
-					<button onclick="previewIframe(getById('whepURL').value);" >Preview WHEP Stream</button> 
-					<button onclick="this.innerHTML = 'Update'; session.publishIFrame(getById('iframeURL').value);" >Start Sharing</button><br />
-					<div class="message-card info">
-						<h1>Usage information</h1>
-						<p></p>
-						<ul style="text-align: left;">
-						<li>WHEP sources are expected to support multiple viewers; simulcasting will be used if possible.</li>
-						<li>Remote URLs must allows cross-origin requests (CORS), along with having SSL (https).</li>
-					</ul>
+			<div id="info" class="fullcolumn columnfade">
+				<center>
+					<div class="infoblob" align="left">
+						<span data-translate="info-blob">
+							<h2>What is Stream Tools</h2>
+							<br />
+							
+							<li>We use cutting edge Peer-to-Peer forwarding technology that offers privacy and ultra-low latency</li>
+							<br />
+							<li>Youtube video 
+								<i class="lab la-youtube"></i>
+								
 					</div>
-				</div>
-				<div class="outer close">
-					<div class="inner">
-						<label class="labelclass">
-							<span data-translate="back">Back</span>
-						</label>
-					</div>
-				</div>
-			</div>
-			
-			<p></p>
-			
-			<div id="unexpectedPushLink" class='hidden' style="width:100%;color: white;display:block;font-size:130%;">
-				<h2>If this page is unexpected, double check your links.</h2>
-				<b>?push=xxx</b> links are for sending video, while <b>?view=xxx</b> links are for viewing.
-			</div>
-			
-			
+				</center>
 			</div>
 			<form method="post" onsubmit="setFormSubmitting()" style="display: none;" aria-hidden="true">
 				<input type="submit" />
